--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -7,8 +7,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - uses: actions/setup-node@v3
+      - name: Setup Node.js
+        uses: actions/setup-node@v3
         with:
+          node-version: 20.x
           registry-url: https://registry.npmjs.org/
       - run: |
           npm install -g node-red-nodegen
@@ -21,7 +23,8 @@ jobs:
         #  npm publish
         #env:
         #  NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN}}
-      - uses: softprops/action-gh-release@v1
+      - name: Create GitHub Release
+        uses: softprops/action-gh-release@v1
         if: startsWith(github.ref, 'refs/tags/')
         with:
           files: node-red-contrib-*.tgz
